--- a/todo.html
+++ b/todo.html
@@ -10,13 +10,14 @@
 
     <h1>Todo-List</h1>
     
-    <section id="input-section" class="input-section">
-
+   <section id="input-section">
+        <div  class="input-section">
     <input type="text" placeholder="input Text" id="js-input">
 
     <button id="js-button">Add</button>
 
     <button id="js-reset">Reset</button>
+    </div>
 
     <div id="array-lists"></div>
 
@@ -24,4 +25,5 @@
 
     <script src="todo.js"></script>
 </body>
+
 </html>
