--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
         <p>A simple task manager built with HTML, CSS, and JavaScript.</p>
       </div>
 
+      <div class="project-card">
+        <h3>Calculator App</h3>
+        <a href="calculator.html" target="_blank">View Project</a>
+        <p>A simple calculator App built with HTML, CSS, and JavaScript</p>
+      </div>
+
     </div>
   </section>
 
@@ -68,6 +74,8 @@
   <button id="scrollTopBtn">Back to Top</button>
 
   <script src="script.js"></script>
+  
 </body>
 
 </html>
+
