--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
 <body>
 
     
-        <input id="input" class="input">
+        <input id="input" class="input" readonly>
     
 
     <div class="grid-container" class="buttons">
@@ -38,4 +38,5 @@
 
     <script src="calculator.js"></script>
 </body>
+
 </html>
